objects/Streaming_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Channel_Name__c</fullName>
        <inlineHelpText>Streaming channel (PushTopic) name</inlineHelpText>
        <label>Channel Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When enabled streaming for the given channel will be tracked for real time changes.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <inlineHelpText>Streaming service for the given channel will be unsubscribed when timeout(milliseconds) has reached. Blank mean infinite.</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Streaming Setting</label>
    <listViews>
        <fullName>Streaming_Settings</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Channel_Name__c</columns>
        <columns>Enabled__c</columns>
        <columns>Timeout__c</columns>
        <filterScope>Everything</filterScope>
        <label>Streaming Settings</label>
    </listViews>
    <pluralLabel>Streaming Settings</pluralLabel>
</CustomObject>